# line_lmi_calibration

./: .editorconfig  .gitignore  default.nix  meson.build
src/: apply_calibration.cpp  calibrate.cpp  calibration.cpp  calibration.h  detect_lines.cpp  detect_lines.h  lines.cpp  lines.h  rescale.cpp  rescale.h  scasub.cpp  select_lines.cpp  test_rescale.cpp
